--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <title>ASTUCOPT | The Digital platform</title>
     <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="description" content="We build a set of comprehensive digital platforms to empower health professionals.">
-  <link href="./assets/css/app.b7dec72f60cad7e4e15c.css" rel="stylesheet"></head>
+  <link href="./assets/css/app.49da92124f57944826a6.css" rel="stylesheet"></head>
   <body>
-    <div class="preloader">
-      <div class="preloader--inner"><img data-name="corp" src="./assets/img/astucorp.svg" alt="Astucorp logo">
-        <ul class="preloader__children">
-          <li><img data-name="pharm" src="./assets/img/astupharm.svg" alt="Astupharm logo"></li>
-          <li><img data-name="med" src="./assets/img/astumed.svg" alt="Astumed logo"></li>
-          <li><img data-name="vet" src="./assets/img/astuvet.svg" alt="Astuvet logo"></li>
-        </ul>
-      </div>
-    </div>
+    <!--.preloader-->
+    <!--    .preloader--inner-->
+    <!--        img(data-name="corp" src="./assets/img/astucorp.svg" alt="Astucorp logo")-->
+    <!--        ul.preloader__children-->
+    <!--            li-->
+    <!--                img(data-name="pharm" src="./assets/img/astupharm.svg" alt="Astupharm logo")-->
+    <!--            li-->
+    <!--                img(data-name="med" src="./assets/img/astumed.svg" alt="Astumed logo")-->
+    <!--            li-->
+    <!--                img(data-name="vet" src="./assets/img/astuvet.svg" alt="Astuvet logo")-->
     <div class="root">
 <header class="header">
   <div class="header__top">
@@ -28,8 +29,8 @@
   <div class="header__body">
     <div class="container">
       <div class="header__content">
-        <h1 class="heading-secondary heading-secondary--main u-text-left u-mb-0">Astu<span class="v-slider">CORP / VET / MED</span></h1>
-        <h3 class="heading-secondary heading-secondary--sub u-text-left"> Join the Digital platform revolution is NOW</h3>
+        <h1 class="heading-secondary heading-secondary--main u-text-left u-mb-0"><span class="v-slider">AstuCORP / AstuVET</span></h1>
+        <h3 class="heading-secondary heading-secondary--sub u-text-left"> Join the Digital platform revolution NOW</h3>
         <p class="paragraph paragraph--lg">We build a set of comprehensive digital platforms to empower health professionals.</p><a class="btn btn--primary" href="./#">Contact us</a>
       </div>
     </div>
@@ -42,14 +43,8 @@
           <div class="container">
             <div class="row">
               <div class="item item--lg">
-                <h2 class="heading-secondary heading-secondary--main u-text-left">Our goal is to simplify the daily lives of healthcare professionals</h2>
-                <p class="paragraph paragraph--md">
-                  We are healthcare, marketing and digital professionals. But we are also friends and family
-                  (not all from the same family, but very close). What unites us is our desire to make a difference:
-                  to simplify the daily lives professionals, to create and optimize customer-supplier relationships,
-                  because if the relationship is good the use of products is better and the health of animals and
-                  humans is improved.
-                </p>
+                <h2 class="heading-tertiary u-text-left">Our goal is to simplify the daily lives of healthcare professionals</h2>
+                <p class="paragraph paragraph--lg">We are healthcare, marketing and digital professionals. But we are also friends and family (not all from the same family, but very close). What unites us is our desire to make a difference: to simplify the daily lives professionals, to create and optimize customer-supplier relationships, because if the relationship is good the use of products is better and the health of animals and humans is improved.</p>
               </div>
               <div class="item item--sm">
                 <div class="grid-container">
@@ -88,7 +83,7 @@
                   <div class="card__content">
                     <p class="paragraph">The unique digital platform for Veterinarians for their daily practice.</p>
                   </div>
-                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Ask the question…</a></div>
+                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Ask a question…</a></div>
                 </div>
               </div>
               <div class="grid-item grid-item-1-of-3">
@@ -97,7 +92,7 @@
                   <div class="card__content">
                     <p class="paragraph">The unique digital platform for Veterinarians for their daily practice.</p>
                   </div>
-                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Ask the question…</a></div>
+                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Ask a question…</a></div>
                 </div>
               </div>
               <div class="grid-item grid-item-1-of-3">
@@ -106,7 +101,7 @@
                   <div class="card__content">
                     <p class="paragraph">The unique digital platform for Veterinarians for their daily practice.</p>
                   </div>
-                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Ask the question…</a></div>
+                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Ask a question…</a></div>
                 </div>
               </div>
             </div>
@@ -159,7 +154,7 @@
             <h3 class="heading-secondary heading-secondary--main">How we made it?</h3>
             <div class="timeline">
               <div class="timeline-progress">
-                <svg id="timeline" xmlns="http://www.w3.org/2000/svg" width="224" height="1585" viewbox="0 0 224 1585">
+                <svg id="timeline" xmlns="http://www.w3.org/2000/svg" width="224" viewbox="0 0 224 1585">
                   <g transform="translate(-854 -3998)">
                     <path class="indicator" d="M8,0A8,8,0,1,1,0,8,8,8,0,0,1,8,0Z" transform="translate(961 3998)" fill="#c5c5c5"></path>
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(1057 4232)" fill="#c5c5c5"></circle>
@@ -170,10 +165,10 @@
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(1062 5303)" fill="#c5c5c5"></circle>
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(1025 5567)" fill="#c5c5c5"></circle>
                     <path id="airplane-path" d="M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422" transform="translate(11838 2899)" fill="none" stroke="#c5c5c5" stroke-linecap="round" stroke-width="2" stroke-dasharray="21"></path>
-                    <path d="M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422" transform="translate(11838 2899)" fill="none" stroke="#E14B4B" stroke-linecap="round" stroke-width="2" stroke-dasharray="21"></path>
+                    <!--path(d='M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422' transform='translate(11838 2899)' fill='none' stroke='#E14B4B' stroke-linecap='round' stroke-width='2' stroke-dasharray='21')-->
                   </g>
                 </svg>
-                <svg id="airplane" xmlns="http://www.w3.org/2000/svg" width="103.187" height="89.731" viewbox="0 0 103.187 89.731">
+                <svg id="airplane" xmlns="http://www.w3.org/2000/svg" width="103.187" viewbox="0 0 103.187 89.731">
                   <g transform="matrix(-0.927, -0.375, 0.375, -0.927, 79.99, 89.731)">
                     <g transform="translate(0 0)">
                       <path d="M86.272,0,0,61.922l31.891-1.49Z" fill="#d6d6d6"></path>
@@ -349,7 +344,7 @@
       <form class="form">
         <div class="form__inline-box">
           <input class="field" type="text" placeholder="Enter your email" required>
-          <button class="btn btn--primary" type="submit">Get in touch</button>
+          <button class="btn btn--primary" type="submit">Start now</button>
         </div>
       </form>
     </div>
@@ -362,5 +357,5 @@
 </footer>
     </div>
     <script type="text/javascript">console.log('custom script');</script>
-  <script type="text/javascript" src="./assets/js/vendors.af00c893cf4147e1c683.js"></script><script type="text/javascript" src="./assets/js/app.2bb8c338bcaab7f7066c.js"></script></body>
+  <script type="text/javascript" src="./assets/js/vendors.8e041b8109b8a3c32e2b.js"></script><script type="text/javascript" src="./assets/js/app.1f884a45016b4ad4d5f3.js"></script></body>
 </html>
