--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>ASTUCOPT | The Digital platform</title>
     <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="description" content="We build a set of comprehensive digital platforms to empower health professionals.">
-  <link href="./assets/css/app.49da92124f57944826a6.css" rel="stylesheet"></head>
+  <link href="./assets/css/app.8c54ff901c1d0a8e00c8.css" rel="stylesheet"></head>
   <body>
     <!--.preloader-->
     <!--    .preloader--inner-->
@@ -29,7 +29,7 @@
   <div class="header__body">
     <div class="container">
       <div class="header__content">
-        <h1 class="heading-secondary heading-secondary--main u-text-left u-mb-0"><span class="v-slider">AstuCORP / AstuVET</span></h1>
+        <h1 class="heading-secondary heading-secondary--main u-text-left u-mb-0">Astu<span class="v-slider">CORP / VET</span></h1>
         <h3 class="heading-secondary heading-secondary--sub u-text-left"> Join the Digital platform revolution NOW</h3>
         <p class="paragraph paragraph--lg">We build a set of comprehensive digital platforms to empower health professionals.</p><a class="btn btn--primary" href="./#">Contact us</a>
       </div>
@@ -165,9 +165,15 @@
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(1062 5303)" fill="#c5c5c5"></circle>
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(1025 5567)" fill="#c5c5c5"></circle>
                     <path id="airplane-path" d="M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422" transform="translate(11838 2899)" fill="none" stroke="#c5c5c5" stroke-linecap="round" stroke-width="2" stroke-dasharray="21"></path>
-                    <!--path(d='M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422' transform='translate(11838 2899)' fill='none' stroke='#E14B4B' stroke-linecap='round' stroke-width='2' stroke-dasharray='21')-->
                   </g>
                 </svg>
+                <div id="timeline-red">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="224" viewbox="0 0 224 1585">
+                    <g transform="translate(-854 -3998)">
+                      <path d="M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422" transform="translate(11838 2899)" fill="none" stroke="#E14B4B" stroke-linecap="round" stroke-width="2" stroke-dasharray="21"></path>
+                    </g>
+                  </svg>
+                </div>
                 <svg id="airplane" xmlns="http://www.w3.org/2000/svg" width="103.187" viewbox="0 0 103.187 89.731">
                   <g transform="matrix(-0.927, -0.375, 0.375, -0.927, 79.99, 89.731)">
                     <g transform="translate(0 0)">
@@ -256,7 +262,7 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="./#"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/jflehelloco/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
                     </ul>
                   </div>
                 </div>
@@ -270,7 +276,7 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="./#"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/r%C3%A9mi-rey-16944620/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
                     </ul>
                   </div>
                 </div>
@@ -284,7 +290,7 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="./#"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/martinstephan/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
                     </ul>
                   </div>
                 </div>
@@ -298,7 +304,7 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="./#"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/liselotte-cousin-le-helloco-8b375837/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
                     </ul>
                   </div>
                 </div>
@@ -312,7 +318,7 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="./#"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/julien-raquidel-795a7b26/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
                     </ul>
                   </div>
                 </div>
@@ -326,7 +332,7 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="./#"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/quentin-le-helloco-423a89169/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
                     </ul>
                   </div>
                 </div>
@@ -343,8 +349,8 @@
       <h3 class="heading-primary">Get in touch</h3>
       <form class="form">
         <div class="form__inline-box">
-          <input class="field" type="text" placeholder="Enter your email" required>
-          <button class="btn btn--primary" type="submit">Start now</button>
+          <input class="field" type="email" placeholder="Enter your email" required>
+          <button class="btn btn--primary btn-submit" type="submit">Start now</button>
         </div>
       </form>
     </div>
@@ -357,5 +363,5 @@
 </footer>
     </div>
     <script type="text/javascript">console.log('custom script');</script>
-  <script type="text/javascript" src="./assets/js/vendors.8e041b8109b8a3c32e2b.js"></script><script type="text/javascript" src="./assets/js/app.1f884a45016b4ad4d5f3.js"></script></body>
+  <script type="text/javascript" src="./assets/js/vendors.54dca74425a20017793e.js"></script><script type="text/javascript" src="./assets/js/app.a713a10392e44db9216e.js"></script></body>
 </html>
