--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>ASTUCOPT | The Digital platform</title>
     <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="description" content="We build a set of comprehensive digital platforms to empower health professionals.">
-  <link href="./assets/css/app.8c54ff901c1d0a8e00c8.css" rel="stylesheet"></head>
+  <link href="./assets/css/vendors.a6f955cbef98a29124c4.css" rel="stylesheet"><link href="./assets/css/app.a14b028ea04a77c464b8.css" rel="stylesheet"></head>
   <body>
     <!--.preloader-->
     <!--    .preloader--inner-->
@@ -23,7 +23,7 @@
     <div class="root">
 <header class="header">
   <div class="header__top">
-    <div class="container"><a class="header__logo" href="./"><img src="./assets/img/astucorp.svg" alt="ASTUCORP logo"></a></div>
+    <div class="container"><a class="header__logo" href="./"><img src="./assets/img/astucorp2.svg" alt="ASTUCORP logo"></a></div>
   </div>
   <div class="header__img"><img src="./assets/img/hero.svg" alt="Hero"></div>
   <div class="header__body">
@@ -156,6 +156,9 @@
               <div class="timeline-progress">
                 <svg id="timeline" xmlns="http://www.w3.org/2000/svg" width="224" viewbox="0 0 224 1585">
                   <g transform="translate(-854 -3998)">
+                    <path id="airplane-path" d="M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422" transform="translate(11838 2899)" fill="none" stroke-miterlimit="21" stroke="#c5c5c5" stroke-linecap="round" stroke-width="2"></path>
+                    <!--path( id="airplane-path-dashed" d='M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422' transform='translate(11838 2899)' fill='none' stroke-miterlimit="21" stroke='#fff' stroke-linecap='round' stroke-width='2')-->
+                    <path id="airplane-path-red" d="M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422" transform="translate(11838 2899)" fill="none" stroke-miterlimit="21" stroke="#E14B4B" stroke-linecap="round" stroke-width="2"></path>
                     <path class="indicator" d="M8,0A8,8,0,1,1,0,8,8,8,0,0,1,8,0Z" transform="translate(961 3998)" fill="#c5c5c5"></path>
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(1057 4232)" fill="#c5c5c5"></circle>
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(1047 4400)" fill="#c5c5c5"></circle>
@@ -164,16 +167,8 @@
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(973 5122)" fill="#c5c5c5"></circle>
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(1062 5303)" fill="#c5c5c5"></circle>
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(1025 5567)" fill="#c5c5c5"></circle>
-                    <path id="airplane-path" d="M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422" transform="translate(11838 2899)" fill="none" stroke="#c5c5c5" stroke-linecap="round" stroke-width="2" stroke-dasharray="21"></path>
                   </g>
                 </svg>
-                <div id="timeline-red">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="224" viewbox="0 0 224 1585">
-                    <g transform="translate(-854 -3998)">
-                      <path d="M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422" transform="translate(11838 2899)" fill="none" stroke="#E14B4B" stroke-linecap="round" stroke-width="2" stroke-dasharray="21"></path>
-                    </g>
-                  </svg>
-                </div>
                 <svg id="airplane" xmlns="http://www.w3.org/2000/svg" width="103.187" viewbox="0 0 103.187 89.731">
                   <g transform="matrix(-0.927, -0.375, 0.375, -0.927, 79.99, 89.731)">
                     <g transform="translate(0 0)">
@@ -239,7 +234,7 @@
                       <p>Pre-commercialization of ASTUVET in the US</p>
                     </li>
                     <li data-timeline-item="7">
-                      <h6>Dec-Jan. , 2020</h6>
+                      <h6>Dec-Jan. , 2021</h6>
                       <p>Launch of ASTUVET in France and US</p>
                     </li>
                   </ul>
@@ -253,8 +248,7 @@
           <div class="container">
             <h3 class="heading-secondary heading-secondary--main"> Meet the tribe</h3>
             <div class="grid-container">
-              <div class="grid-item grid-item-1-of-3">
-                <div class="card">
+              <div class="grid-item grid-item-1-of-3"><a class="card" href="https://www.linkedin.com/in/jflehelloco/" target="_blank">
                   <div class="card__img card__img--photo card__img--border-blue"><img src="./assets/img/member-1.png" alt="Member"></div>
                   <div class="card__content">
                     <h4 class="card__title">Jean-François LE HELLOCO</h4>
@@ -262,13 +256,10 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/jflehelloco/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><span class="scoials__link"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></span></li>
                     </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="grid-item grid-item-1-of-3">
-                <div class="card">
+                  </div></a></div>
+              <div class="grid-item grid-item-1-of-3"><a class="card" href="https://www.linkedin.com/in/r%C3%A9mi-rey-16944620/" target="_blank">
                   <div class="card__img card__img--photo card__img--border-green"><img src="./assets/img/member-2.png" alt="Member"></div>
                   <div class="card__content">
                     <h4 class="card__title">Rémi REY</h4>
@@ -276,13 +267,10 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/r%C3%A9mi-rey-16944620/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><span class="scoials__link"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></span></li>
                     </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="grid-item grid-item-1-of-3">
-                <div class="card">
+                  </div></a></div>
+              <div class="grid-item grid-item-1-of-3"><a class="card" href="https://www.linkedin.com/in/martinstephan/" target="_blank">
                   <div class="card__img card__img--photo card__img--border-blue"><img src="./assets/img/member-3.png" alt="Member"></div>
                   <div class="card__content">
                     <h4 class="card__title">Stéphan MARTIN</h4>
@@ -290,13 +278,10 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/martinstephan/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><span class="scoials__link"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></span></li>
                     </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="grid-item grid-item-1-of-3">
-                <div class="card">
+                  </div></a></div>
+              <div class="grid-item grid-item-1-of-3"><a class="card" href="https://www.linkedin.com/in/liselotte-cousin-le-helloco-8b375837/" target="_blank">
                   <div class="card__img card__img--photo card__img--border-red"><img src="./assets/img/member-4.png" alt="Member"></div>
                   <div class="card__content">
                     <h4 class="card__title">Liselotte COUSIN- LE HELLOCO</h4>
@@ -304,13 +289,10 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/liselotte-cousin-le-helloco-8b375837/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><span class="scoials__link"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></span></li>
                     </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="grid-item grid-item-1-of-3">
-                <div class="card">
+                  </div></a></div>
+              <div class="grid-item grid-item-1-of-3"><a class="card" href="https://www.linkedin.com/in/julien-raquidel-795a7b26/" target="_blank">
                   <div class="card__img card__img--photo card__img--border-blue"><img src="./assets/img/member-5.png" alt="Member"></div>
                   <div class="card__content">
                     <h4 class="card__title">Julien RAQUIDEL</h4>
@@ -318,13 +300,12 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/julien-raquidel-795a7b26/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item">
+                        <div class="scoials__link"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></div>
+                      </li>
                     </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="grid-item grid-item-1-of-3">
-                <div class="card">
+                  </div></a></div>
+              <div class="grid-item grid-item-1-of-3"><a class="card" href="https://www.linkedin.com/in/quentin-le-helloco-423a89169/" target="_blank">
                   <div class="card__img card__img--photo card__img--border-green"><img src="./assets/img/member-6.png" alt="Member"></div>
                   <div class="card__content">
                     <h4 class="card__title">Quentin LE HELLOCO</h4>
@@ -332,36 +313,94 @@
                   </div>
                   <div class="card__socials">
                     <ul class="socials">
-                      <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/in/quentin-le-helloco-423a89169/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                      <li class="socials__item"><span class="scoials__link"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></span></li>
                     </ul>
-                  </div>
-                </div>
-              </div>
+                  </div></a></div>
             </div>
           </div>
         </section>
       </main>
 <footer class="footer">
   <div class="footer__bubbles"><img src="./assets/img/footer-bubbles.svg" alt="bubbles"></div>
-  <div class="footer__figure figure"><svg xmlns="http://www.w3.org/2000/svg" width="1920.001" viewBox="0 0 1920.001 1285.266"><path d="M-19,4467.265H-1939v-473.27c5.053-.84,10.31-1.648,15.627-2.4,16.676-2.359,34.895-4.312,54.151-5.8,35.264-2.733,75.137-4.062,121.9-4.062,72.871,0,151.965,3.2,235.7,6.587h.021l.089,0h.033l.041,0h.042l3.688.149.581.024,4.06.165,2.75.112.158.005c44.657,1.8,88.438,3.533,133.078,4.847,50.415,1.484,94.73,2.2,135.475,2.2,53.959,0,102.442-1.238,148.22-3.784,24.99-1.388,49.427-3.2,72.632-5.387,24.471-2.306,48.358-5.1,71-8.3,23.74-3.36,46.91-7.283,68.868-11.662,22.889-4.563,45.179-9.763,66.25-15.456,21.865-5.907,43.11-12.533,63.143-19.693,20.711-7.4,40.745-15.6,59.546-24.368,14.924-6.959,29.858-14.55,44.387-22.564,14.121-7.789,28.281-16.209,42.087-25.028,13.409-8.567,26.828-17.73,39.885-27.235,12.678-9.229,25.39-19.049,37.781-29.188,12-9.822,24.04-20.213,35.775-30.884,11.352-10.326,22.746-21.2,33.865-32.328,10.721-10.729,21.505-22.006,32.053-33.517,10.112-11.033,20.32-22.624,30.34-34.448,35.081-41.4,69.81-87.855,106.173-142.031,31.755-47.31,60.838-94.678,86.5-136.47l.05-.081.012-.02,0-.007.076-.124.006-.01c16.643-27.108,32.363-52.713,47.5-76.248,16.95-26.348,30.87-46.514,43.806-63.464,15.022-19.683,28.636-34.855,41.619-46.383a150.5,150.5,0,0,1,20.489-15.487A93.2,93.2,0,0,1-19,3182V4467.264Z" transform="translate(1939 -3181.999)" fill="#dff5fe" opacity="0.3"/></svg></div>
+  <div class="footer__figure figure">
+    <svg xmlns="http://www.w3.org/2000/svg" width="1920.001" viewBox="0 0 1920.001 1857.265">
+      <path id="Union_11" data-name="Union 11" d="M-2068,4899.265V4435.528h0V3922.392c5.053-.911,10.311-1.786,15.627-2.6,16.676-2.558,34.894-4.676,54.151-6.293,35.264-2.963,75.137-4.4,121.9-4.4,72.871,0,151.965,3.469,235.7,7.141h.022l.088,0h.033l.042,0,.041,0,3.688.161.581.025,4.061.178,2.75.122.158,0c44.657,1.957,88.437,3.83,133.078,5.256,50.415,1.608,94.729,2.389,135.475,2.389,53.958,0,102.442-1.341,148.22-4.1,24.99-1.5,49.427-3.471,72.632-5.84,24.472-2.5,48.358-5.53,71-9,23.739-3.644,46.91-7.9,68.867-12.645,22.89-4.947,45.18-10.585,66.251-16.757,21.866-6.406,43.11-13.59,63.143-21.352,20.71-8.026,40.744-16.916,59.546-26.421,14.925-7.545,29.858-15.775,44.387-24.465,14.121-8.444,28.281-17.574,42.087-27.135,13.408-9.289,26.827-19.224,39.885-29.529,12.678-10.006,25.389-20.654,37.78-31.646,12-10.649,24.041-21.915,35.776-33.486,11.353-11.2,22.747-22.989,33.866-35.051,10.721-11.633,21.505-23.86,32.053-36.34,10.112-11.962,20.319-24.529,30.339-37.35,35.082-44.884,69.811-95.257,106.174-153.995,31.754-51.3,60.838-102.654,86.5-147.966l.05-.089.011-.021,0-.008.076-.135.006-.01c16.643-29.392,32.363-57.154,47.5-82.672,16.951-28.567,30.871-50.433,43.807-68.809,15.022-21.341,28.636-37.791,41.618-50.292a152.374,152.374,0,0,1,20.489-16.791A90.137,90.137,0,0,1-148,3042V4435.528h0v463.737Z" transform="translate(2068 -3042)" fill="#f5fcff"/>
+    </svg>
+  </div>
   <div class="footer__content">
     <div class="container">
-      <h3 class="heading-primary">Get in touch</h3>
-      <form class="form">
-        <div class="form__inline-box">
-          <input class="field" type="email" placeholder="Enter your email" required>
-          <button class="btn btn--primary btn-submit" type="submit">Start now</button>
+      <div class="grid-container">
+        <div class="grid-item-1-of-2">
+          <h3 class="heading-primary u-text-left">Contact us</h3>
+          <div class="contacts">
+            <div class="contacts__section">
+              <p>
+                We’re here to help and answer any question you might have.
+                Fill out the form and we’ll be in touch as soon as possible.
+              </p>
+            </div>
+            <div class="contacts__section">
+              <ul class="contacts-list">
+                <li class="contacts-list__item"><span class="contacts-list__icon"><img src="./assets/img/pointer.svg" alt="Pointer Icon"></span><span class="contacts-list__el">Spaces Opera, 7 Rue Meyerbeer; Paris, 75009</span></li>
+                <li class="contacts-list__item"><span class="contacts-list__icon"><img src="./assets/img/phone.svg" alt="Pointer Icon"></span><a class="contacts-list__el" href="tel:+ 33 6 60492921">+ 33 6 60492921</a></li>
+                <li class="contacts-list__item"><span class="contacts-list__icon"><img src="./assets/img/mail.svg" alt="Pointer Icon"></span><a class="contacts-list__el" href="mailto:hello@astucorp.com">hello@astucorp.com</a></li>
+              </ul>
+            </div>
+            <div class="contacts__section">
+              <p>We have a social life :</p>
+              <ul class="socials socials--left">
+                <li class="socials__item"><a class="scoials__link" href="" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                <li class="socials__item"><a class="scoials__link" href="" target="_blank"><img src="./assets/img/facebook.svg" alt="FaceBook"></a></li>
+              </ul>
+            </div>
+          </div>
         </div>
-      </form>
+        <div class="grid-item-1-of-2">
+          <div class="form-box">
+            <form class="form">
+              <div class="field">
+                <label>Full name<sup>*</sup></label>
+                <input type="text" name="fullName" placeholder="Jane Doe" required>
+              </div>
+              <div class="field">
+                <label>Email or phone number<sup>*</sup></label>
+                <input type="text" name="email" placeholder="janedoe@gmail.com" required>
+              </div>
+              <div class="field">
+                <label>Contact us as</label>
+                <select name="area">
+                  <option value="">Please select your area</option>
+                  <option>Health Industry company</option>
+                  <option>Healthcare professsional</option>
+                  <option>Investor</option>
+                  <option>Other</option>
+                </select>
+              </div>
+              <div class="field">
+                <label>Anything else you'd like us to know?</label>
+                <textarea name="comment" placeholder="Please tell us more about your needs"></textarea>
+              </div>
+              <div class="buttons">
+                <button class="btn btn--primary btn-submit" type="submit">Contact us</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="footer__copyright">
     <div class="container">
-      <p> Copyright &copy; Astucorp 2020</p>
+      <p> Copyright &copy; Astucorp <span id="year"></span></p>
     </div>
   </div>
 </footer>
+      <div class="u-hidden">
+        <div id="sucess-submit"><img src="./assets/img/success-submit.svg" alt="Success Image">
+          <p>Our Team will get back to <br> you as soon as possible.</p>
+        </div>
+      </div>
     </div>
-    <script type="text/javascript">console.log('custom script');</script>
-  <script type="text/javascript" src="./assets/js/vendors.54dca74425a20017793e.js"></script><script type="text/javascript" src="./assets/js/app.a713a10392e44db9216e.js"></script></body>
+    <script type="text/javascript"></script>
+  <script type="text/javascript" src="./assets/js/vendors.5f181ea442f51ab01c71.js"></script><script type="text/javascript" src="./assets/js/app.dd149b363ce8505bd2fc.js"></script></body>
 </html>
