--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#1D3867">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>ASTUCOPT | The Digital platform</title>
+    <title>Astucorp - digital revolution in healthcare</title>
     <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <meta name="description" content="We build a set of comprehensive digital platforms to empower health professionals.">
-  <link href="./assets/css/vendors.a6f955cbef98a29124c4.css" rel="stylesheet"><link href="./assets/css/app.a14b028ea04a77c464b8.css" rel="stylesheet"></head>
+    <meta name="description" content="Digital revolution in healthcare">
+  <link href="./assets/css/vendors.a6f955cbef98a29124c4.css" rel="stylesheet"><link href="./assets/css/app.046ae399f0008d409c6e.css" rel="stylesheet"></head>
   <body>
     <!--.preloader-->
     <!--    .preloader--inner-->
@@ -31,7 +31,7 @@
       <div class="header__content">
         <h1 class="heading-secondary heading-secondary--main u-text-left u-mb-0">Astu<span class="v-slider">CORP / VET</span></h1>
         <h3 class="heading-secondary heading-secondary--sub u-text-left"> Join the Digital platform revolution NOW</h3>
-        <p class="paragraph paragraph--lg">We build a set of comprehensive digital platforms to empower health professionals.</p><a class="btn btn--primary" href="./#">Contact us</a>
+        <p class="paragraph paragraph--lg">We build a set of comprehensive digital platforms to empower health professionals.</p><a class="btn btn--primary" href="#callback">Contact us</a>
       </div>
     </div>
   </div>
@@ -83,7 +83,7 @@
                   <div class="card__content">
                     <p class="paragraph">The unique digital platform for Veterinarians for their daily practice.</p>
                   </div>
-                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Ask a question…</a></div>
+                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="#callback">Ask a question…</a></div>
                 </div>
               </div>
               <div class="grid-item grid-item-1-of-3">
@@ -92,7 +92,7 @@
                   <div class="card__content">
                     <p class="paragraph">The unique digital platform for Veterinarians for their daily practice.</p>
                   </div>
-                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Ask a question…</a></div>
+                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="#callback">Ask a question…</a></div>
                 </div>
               </div>
               <div class="grid-item grid-item-1-of-3">
@@ -101,7 +101,7 @@
                   <div class="card__content">
                     <p class="paragraph">The unique digital platform for Veterinarians for their daily practice.</p>
                   </div>
-                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Ask a question…</a></div>
+                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="#callback">Ask a question…</a></div>
                 </div>
               </div>
             </div>
@@ -120,7 +120,7 @@
                     <h4 class="card__title">Health Industry company</h4>
                     <p class="paragraph">... eager to reach your clients with more efficiency and share your products, tools, marketing content in an easy way.</p>
                   </div>
-                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Contact us</a></div>
+                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="#callback">Contact us</a></div>
                 </div>
               </div>
               <div class="grid-item grid-item-1-of-3">
@@ -130,7 +130,7 @@
                     <h4 class="card__title">Healthcare professional</h4>
                     <p class="paragraph">… looking for a unique place to access everything you need in your daily practice for free.</p>
                   </div>
-                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Contact us</a></div>
+                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="#callback">Contact us</a></div>
                 </div>
               </div>
               <div class="grid-item grid-item-1-of-3">
@@ -138,9 +138,9 @@
                   <div class="card__img card__img--icon"><img src="./assets/img/Investor.svg" alt="Investor"></div>
                   <div class="card__content">
                     <h4 class="card__title">Investor</h4>
-                    <p class="paragraph">...and want to be part of our success.</p>
+                    <p class="paragraph">...who wants to be a part of our success.</p>
                   </div>
-                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="./#">Contact us</a></div>
+                  <div class="card__buttons"><a class="btn btn--secondary btn--md" href="#callback">Contact us</a></div>
                 </div>
               </div>
             </div>
@@ -327,7 +327,7 @@
       <path id="Union_11" data-name="Union 11" d="M-2068,4899.265V4435.528h0V3922.392c5.053-.911,10.311-1.786,15.627-2.6,16.676-2.558,34.894-4.676,54.151-6.293,35.264-2.963,75.137-4.4,121.9-4.4,72.871,0,151.965,3.469,235.7,7.141h.022l.088,0h.033l.042,0,.041,0,3.688.161.581.025,4.061.178,2.75.122.158,0c44.657,1.957,88.437,3.83,133.078,5.256,50.415,1.608,94.729,2.389,135.475,2.389,53.958,0,102.442-1.341,148.22-4.1,24.99-1.5,49.427-3.471,72.632-5.84,24.472-2.5,48.358-5.53,71-9,23.739-3.644,46.91-7.9,68.867-12.645,22.89-4.947,45.18-10.585,66.251-16.757,21.866-6.406,43.11-13.59,63.143-21.352,20.71-8.026,40.744-16.916,59.546-26.421,14.925-7.545,29.858-15.775,44.387-24.465,14.121-8.444,28.281-17.574,42.087-27.135,13.408-9.289,26.827-19.224,39.885-29.529,12.678-10.006,25.389-20.654,37.78-31.646,12-10.649,24.041-21.915,35.776-33.486,11.353-11.2,22.747-22.989,33.866-35.051,10.721-11.633,21.505-23.86,32.053-36.34,10.112-11.962,20.319-24.529,30.339-37.35,35.082-44.884,69.811-95.257,106.174-153.995,31.754-51.3,60.838-102.654,86.5-147.966l.05-.089.011-.021,0-.008.076-.135.006-.01c16.643-29.392,32.363-57.154,47.5-82.672,16.951-28.567,30.871-50.433,43.807-68.809,15.022-21.341,28.636-37.791,41.618-50.292a152.374,152.374,0,0,1,20.489-16.791A90.137,90.137,0,0,1-148,3042V4435.528h0v463.737Z" transform="translate(2068 -3042)" fill="#f5fcff"/>
     </svg>
   </div>
-  <div class="footer__content">
+  <div class="footer__content" id="callback">
     <div class="container">
       <div class="grid-container">
         <div class="grid-item-1-of-2">
@@ -360,11 +360,11 @@
             <form class="form">
               <div class="field">
                 <label>Full name<sup>*</sup></label>
-                <input type="text" name="fullName" placeholder="Jane Doe" required>
+                <input type="text" name="fullName" placeholder="Jane Doe">
               </div>
               <div class="field">
                 <label>Email or phone number<sup>*</sup></label>
-                <input type="text" name="email" placeholder="janedoe@gmail.com" required>
+                <input type="text" name="email" placeholder="janedoe@gmail.com">
               </div>
               <div class="field">
                 <label>Contact us as</label>
@@ -402,5 +402,5 @@
       </div>
     </div>
     <script type="text/javascript"></script>
-  <script type="text/javascript" src="./assets/js/vendors.5f181ea442f51ab01c71.js"></script><script type="text/javascript" src="./assets/js/app.dd149b363ce8505bd2fc.js"></script></body>
+  <script type="text/javascript" src="./assets/js/vendors.44229f9a169880425f30.js"></script><script type="text/javascript" src="./assets/js/app.0fdf2b0d553292bc2d53.js"></script></body>
 </html>
