--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
             <div class="contacts__section">
               <p>We have a social life :</p>
               <ul class="socials socials--left">
-                <li class="socials__item"><a class="scoials__link" href="" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
-                <li class="socials__item"><a class="scoials__link" href="" target="_blank"><img src="./assets/img/facebook.svg" alt="FaceBook"></a></li>
+                <li class="socials__item"><a class="scoials__link" href="https://www.linkedin.com/company/astucorp/" target="_blank"><img src="./assets/img/linkedin.svg" alt="LinkedIn"></a></li>
+                <li class="socials__item"><a class="scoials__link" href="https://www.facebook.com/Astucorp-104796074512280" target="_blank"><img src="./assets/img/facebook.svg" alt="FaceBook"></a></li>
               </ul>
             </div>
           </div>
@@ -402,5 +402,5 @@
       </div>
     </div>
     <script type="text/javascript"></script>
-  <script type="text/javascript" src="./assets/js/vendors.44229f9a169880425f30.js"></script><script type="text/javascript" src="./assets/js/app.0fdf2b0d553292bc2d53.js"></script></body>
+  <script type="text/javascript" src="./assets/js/vendors.ca7369da9b5469cfdb4c.js"></script><script type="text/javascript" src="./assets/js/app.8c0c0e8cf4a5b045e88d.js"></script></body>
 </html>
