--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Astucorp - digital revolution in healthcare</title>
     <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="description" content="Digital revolution in healthcare">
-  <link href="./assets/css/vendors.a6f955cbef98a29124c4.css" rel="stylesheet"><link href="./assets/css/app.565ce1fad52204e63161.css" rel="stylesheet"></head>
+  <link href="./assets/css/vendors.a6f955cbef98a29124c4.css" rel="stylesheet"><link href="./assets/css/app.ff5b47a1bc00c60b527a.css" rel="stylesheet"></head>
   <body>
     <div class="root">
 <header class="header">
@@ -45,7 +45,7 @@
                 <div class="grid-container">
                   <div class="grid-item grid-item-1-of-2">
                     <div class="card card--sm"><span class="card__num u-text-red">5</span>
-                      <p class="paragraph">Pet owned</p>
+                      <p class="paragraph">5 spoken languages</p>
                     </div>
                   </div>
                   <div class="grid-item grid-item-1-of-2">
@@ -415,5 +415,5 @@
       </div>
     </div>
     <script type="text/javascript"></script>
-  <script type="text/javascript" src="./assets/js/vendors.62b6185f65c96b96cd98.js"></script><script type="text/javascript" src="./assets/js/app.00a44499db20f33eea9c.js"></script></body>
+  <script type="text/javascript" src="./assets/js/vendors.62b6185f65c96b96cd98.js"></script><script type="text/javascript" src="./assets/js/app.3d83ef4546019a369041.js"></script></body>
 </html>
