--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Astucorp - digital revolution in healthcare</title>
     <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="description" content="Digital revolution in healthcare">
-  <link href="./assets/css/vendors.a6f955cbef98a29124c4.css" rel="stylesheet"><link href="./assets/css/app.ff5b47a1bc00c60b527a.css" rel="stylesheet"></head>
+  <link href="./assets/css/vendors.a6f955cbef98a29124c4.css" rel="stylesheet"><link href="./assets/css/app.25bdeb086387f78bb68d.css" rel="stylesheet"></head>
   <body>
     <div class="root">
 <header class="header">
@@ -105,6 +105,42 @@
             <div class="about__figure figure"><svg xmlns="http://www.w3.org/2000/svg" width="1078.495" viewBox="0 0 1078.495 1490.182"><path d="M-1835.509,4795.5c-.708-.879-1.234-99.557-1.645-245.615V3315.345h5.373c331.65,131.06-195.405,484.15,502.632,532.492,744.257,51.544,762.819,797.594,40.884,922.922-142.954,24.817-266.291,34.768-372.184,34.768C-1725.151,4805.526-1783.346,4801.811-1835.509,4795.5Z" transform="translate(1837.154 -3315.345)" fill="rgba(96,203,250,0.2)" opacity="0.3"/></svg></div>
           </div>
         </section>
+        <section class="preview">
+          <div class="preview__arrow">
+            <svg id="arrow" xmlns="http://www.w3.org/2000/svg" width="27" height="24" viewbox="0 0 27 24">
+              <path data-name="Polygon 7" d="M11.757,3.1a2,2,0,0,1,3.486,0l10.08,17.921A2,2,0,0,1,23.58,24H3.42a2,2,0,0,1-1.743-2.981Z" transform="translate(27 24) rotate(180)" fill="#e14b4b"></path>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="423.806" viewbox="0 0 423.806 302.37">
+              <g transform="translate(-527.548 -2566.059)">
+                <path id="arrow-path" data-name="Path 4559" d="M538,2566.667c-31.333,70.667,18,181.333,182,152s232.667,88.667,219.333,134" fill="none" stroke="#e14b4b" stroke-width="3"></path>
+              </g>
+            </svg>
+          </div>
+          <div class="container-fixed">
+            <div class="preview__figure figure">
+              <svg xmlns="http://www.w3.org/2000/svg" width="1073.814" height="1481.818" viewBox="0 0 1073.814 1481.818">
+              	<path id="Intersection_24" data-name="Intersection 24" d="M-1127.241,4328.344c-291.148-137.083,200.462-476.778-483.236-524.128-744.258-51.544-762.82-797.594-40.885-922.923,228.615-39.687,407.073-41.356,544.209-25.106V4328.344Z" transform="translate(2180.968 -2846.526)" fill="rgba(96,203,250,0.2)" opacity="0.3"/>
+              </svg>
+            </div>
+          </div>
+          <div class="container">
+            <div class="head">
+              <h3 class="heading-secondary heading-secondary--main">Watch our ASTUVET video</h3>
+              <p class="paragraph paragraph--lg u-text-center">Everything for veterinarians' daily practice is just one click away!</p>
+            </div>
+            <div class="video-container">
+              <div class="video">
+                <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+                  <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+                    <div class="wistia_embed wistia_async_yzvujq9svt videoFoam=true" style="height:100%;position:relative;width:100%">
+                      <div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/yzvujq9svt/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="cta">
           <div class="cta__bubbles"><img src="./assets/img/cta-bubbles.svg" alt="bubbles"></div>
           <div class="container">
@@ -156,7 +192,6 @@
                 <svg id="timeline" xmlns="http://www.w3.org/2000/svg" width="224" viewbox="0 0 224 1585">
                   <g transform="translate(-854 -3998)">
                     <path id="airplane-path" d="M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422" transform="translate(11838 2899)" fill="none" stroke-miterlimit="21" stroke="#c5c5c5" stroke-linecap="round" stroke-width="2"></path>
-                    <!--path( id="airplane-path-dashed" d='M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422' transform='translate(11838 2899)' fill='none' stroke-miterlimit="21" stroke='#fff' stroke-linecap='round' stroke-width='2')-->
                     <path id="airplane-path-red" d="M-10868,1109c44,50,200,318,0,558s-87,442,32,588,64,331,33,422" transform="translate(11838 2899)" fill="none" stroke-miterlimit="21" stroke="#E14B4B" stroke-linecap="round" stroke-width="2"></path>
                     <path class="indicator" d="M8,0A8,8,0,1,1,0,8,8,8,0,0,1,8,0Z" transform="translate(961 3998)" fill="#c5c5c5"></path>
                     <circle class="indicator" cx="8" cy="8" r="8" transform="translate(1057 4232)" fill="#c5c5c5"></circle>
@@ -414,6 +449,9 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript"></script>
-  <script type="text/javascript" src="./assets/js/vendors.62b6185f65c96b96cd98.js"></script><script type="text/javascript" src="./assets/js/app.3d83ef4546019a369041.js"></script></body>
+    <script src="https://fast.wistia.com/embed/medias/yzvujq9svt.jsonp" async=""></script>
+    <script src="https://fast.wistia.com/assets/external/E-v1.js" async=""></script>
+    <script src="https://fast.wistia.com/embed/medias/yzvujq9svt.jsonp" async></script>
+    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+  <script type="text/javascript" src="./assets/js/vendors.64800bff7056e4311fd9.js"></script><script type="text/javascript" src="./assets/js/app.06dd48687565dc31390a.js"></script></body>
 </html>
